// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentList renders correctly when there are no documents 1`] = `
<Table
  className="document-table"
  responsiveTag="div"
  tag="table"
>
  <tbody>
    <tr
      className="dlist-header"
    >
      <th
        className="background-null text-white"
        colSpan="3"
      >
        undefined documents
      </th>
    </tr>
    <tr>
      <th
        className="text-centered"
      >
        Document name
      </th>
      <th
        className="text-centered"
      >
        File
      </th>
      <th />
    </tr>
  </tbody>
</Table>
`;

exports[`DocumentList renders correctly with documents 1`] = `
<Table
  className="document-table"
  responsiveTag="div"
  tag="table"
>
  <tbody>
    <tr
      className="dlist-header"
    >
      <th
        className="background-null text-white"
        colSpan="3"
      >
        undefined documents
      </th>
    </tr>
    <tr>
      <th
        className="text-centered"
      >
        Document name
      </th>
      <th
        className="text-centered"
      >
        File
      </th>
      <th />
    </tr>
    <Connect(withRouter(DocumentListItem))
      docClass="Board of Directors"
      document={
        Object {
          "docClass": "Board of Directors",
          "status": "Missing",
        }
      }
      key="0"
    />
    <Connect(withRouter(DocumentListItem))
      docClass="Auditor Letter"
      document={
        Object {
          "docClass": "Auditor Letter",
          "status": "Missing",
        }
      }
      key="1"
    />
  </tbody>
</Table>
`;
